--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.mystiquecatalogue_android"
-        minSdkVersion 23
+        minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -16,13 +16,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support.test:runner:1.0.2'
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation('com.mikepenz:materialdrawer:6.0.9@aar') {
+        transitive = true
+    }
+    //required support lib modules
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.1.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:26.1.1'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.1.1'
+    //implementation 'com.github.chrisbanes:PhotoView:2.1.4'
+
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
 }
+
+apply plugin: 'com.google.gms.google-services'
