--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mystiquecatalogue_android">
 
     <application
+        android:name=".views.AndroidApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.contacts.ContactsActivity" />
+        <activity android:name=".views.contacts.EmailActivity" />
+
+        <activity android:name=".views.products.ProductActivity"/>
+        <activity android:name=".views.products.Drinks.DrinksListActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.Drinks.DrinksDetailsActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.Food.FoodListActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.Domestics.DomesticListActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.Food.FoodDetailsActivity"
+            tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.Domestics.DomesticDetailsActivity"
+            tools:ignore="InnerclassSeparator" />
     </application>
 
 </manifest>
