--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,25 @@ dependencies {
     //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
     implementation 'com.android.support:support-v4:28.0.0-rc01'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
+    // ButterKnife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // Dagger
+    implementation "com.google.dagger:dagger:2.17"
+    implementation "com.google.dagger:dagger-android:2.17"
+    implementation "com.google.dagger:dagger-android-support:2.17"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.17"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.17"
+
+    // ReactiveX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
