--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     //noinspection GradleDependency
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
     implementation 'com.android.support:support-v4:28.0.0-rc01'
+
+    //Butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
