--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity android:name=".views.contacts.ContactsActivity" />
         <activity android:name=".views.contacts.EmailActivity" />
 
-        <activity android:name=".views.products.ProductActivity"/>
+        <activity android:name=".views.products.ProductList.ProductsListActivity"/>
         <activity android:name=".views.products.Drinks.DrinksListActivity"
             tools:ignore="InnerclassSeparator" />
         <activity android:name=".views.products.Drinks.DrinksDetailsActivity"
