--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,22 +20,29 @@
         </activity>
         <activity android:name=".views.contacts.ContactsActivity" />
         <activity android:name=".views.contacts.EmailActivity" />
-
-        <activity android:name=".views.products.ProductList.ProductsListActivity"/>
-        <activity android:name=".views.products.Drinks.DrinksListActivity"
+        <activity android:name=".views.products.ProductList.ProductsListActivity" />
+        <activity
+            android:name=".views.products.Drinks.DrinksListActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.Drinks.DrinksDetailsActivity"
+        <activity
+            android:name=".views.products.Drinks.DrinksDetailsActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.Food.FoodListActivity"
+        <activity
+            android:name=".views.products.Food.FoodListActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.Domestics.DomesticListActivity"
+        <activity
+            android:name=".views.products.Domestics.DomesticListActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.Food.FoodDetailsActivity"
+        <activity
+            android:name=".views.products.Food.FoodDetailsActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.ProductDetails.ProductDetailsActivity"
+        <activity
+            android:name=".views.products.ProductDetails.ProductDetailsActivity"
             tools:ignore="InnerclassSeparator" />
-        <activity android:name=".views.products.Domestics.DomesticDetailsActivity"
+        <activity
+            android:name=".views.products.Domestics.DomesticDetailsActivity"
             tools:ignore="InnerclassSeparator" />
+        <activity android:name=".views.products.DrinksList.DrinksListActivity"></activity>
     </application>
 
 </manifest>
