--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,13 @@
         <activity android:name=".views.contacts.ContactsActivity" />
         <activity android:name=".views.contacts.EmailActivity" />
         <activity android:name=".views.products.ProductList.ProductsListActivity" />
-        <activity android:name=".views.products.ProductDetails.ProductDetailsActivity"
+        <activity
+            android:name=".views.products.ProductDetails.ProductDetailsActivity"
             tools:ignore="InnerclassSeparator" />
         <activity android:name=".views.products.DrinksList.DrinksListActivity" />
         <activity android:name=".views.products.FoodList.FoodListActivity" />
-        <activity android:name=".views.products.DomesticList.DomesticListActivity"></activity>
+        <activity android:name=".views.products.DomesticList.DomesticListActivity" />
+        <activity android:name=".views.products.WishList.BagActivity"></activity>
     </application>
 
 </manifest>
