updated gradle dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     // JUnit
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 
     // Mockito
-    testCompile "org.mockito:mockito-core:2.22.0"
+    testImplementation "org.mockito:mockito-core:2.22.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
